--- a/src/theme.scss
+++ b/src/theme.scss
@@ -354,7 +354,8 @@ body {
           background-color: $all-color;
         }
 
-        &.watching:after {
+        &.watching:after,
+        &.reading:after {
           background-color: $watching-color;
         }
 
@@ -370,7 +371,8 @@ body {
           background-color: $dropped-color;
         }
 
-        &.plantowatch:after {
+        &.plantowatch:after,
+        &.plantoread:after {
           background-color: $planned-color;
         }
       }
@@ -577,7 +579,8 @@ body {
                 left: $item-padding;
               }
 
-              &.watching {
+              &.watching,
+              &.reading {
                 background: $status-shadow, $watching-color;
 
                 &:before {
@@ -585,7 +588,8 @@ body {
                 }
               }
 
-              &.plantowatch {
+              &.plantowatch,
+              &.plantoread {
                 background: $status-shadow, $planned-color;
 
                 &:before {
