--- a/src/theme.scss
+++ b/src/theme.scss
@@ -562,11 +562,10 @@ body {
         box-shadow: $box-shadow;
 
         &:hover {
-          /* increase size of image on hover (gets blurry)
-          width: $cover-width + $item-padding * 2;
-          height: $cover-height + $item-padding * 2;
-          margin: 0;
-          */
+          width: $cover-width + $item-padding * 6;
+          height: $cover-height + $item-padding * 6;
+          margin: $item-padding*2 * -1;
+          z-index: 2;
 
           .list-table-data .data.title .add-edit-more,
           .list-table-data .data.progress .icon-add-episode {
