--- a/src/theme.scss
+++ b/src/theme.scss
@@ -67,14 +67,37 @@ $text-border: $font-color 1px solid;
   font-family: lucida grande, tahoma, verdana, arial, sans-serif;
 }
 
-@mixin list-menu-popup {
+@mixin tooltip-placement($align: left, $offset: 0) {
   @include font;
-  left: 0;
+  #{$align}: $offset;
   top: 0;
   margin-top: ($font-size + $item-padding*2) * -1;
   height: $font-size + $item-padding;
-  text-align: left;
+  text-align: $align;
   padding-top: $item-padding;
+
+  &:hover {
+    text-decoration: underline;
+  }
+}
+
+@mixin tooltip($text, $align: left, $offset: 0, $width: 94px) {
+  &:after {
+    @include tooltip-placement($align, $offset);
+    content: $text;
+    position: absolute;
+    overflow: hidden;
+    width: 0;
+    opacity: 0;
+    transition-property: all;
+    transition-duration: 0.3s;
+    transition-timing-function: ease-in-out;
+  }
+
+  &:hover:after {
+    width: $width;
+    opacity: 1;
+  }
 }
 
 body {
@@ -202,24 +225,11 @@ body {
     }
 
     &.profile {
-      &:hover:after {
-        display: inline-block;
-      }
-
-      &:after {
-        @include list-menu-popup;
-        content: 'Profile';
-        display: none;
-        position: absolute;
-      }
+      @include tooltip('Profile');
     }
 
     .text {
-      @include list-menu-popup;
-
-      &:hover {
-        text-decoration: underline;
-      }
+      @include tooltip-placement;
     }
 
     svg.icon {
@@ -421,6 +431,7 @@ body {
       }
 
       #search-button {
+        @include tooltip('Search', right);
         color: $font-color;
         font-size: $icon-size;
         height: $icon-size;
@@ -467,6 +478,14 @@ body {
             text-shadow: $text-shadow;
           }
         }
+
+        #show-stats-button {
+          @include tooltip('Statistics', right, $icon-size + $icon-padding);
+        }
+
+        #advanced-options-button {
+          @include tooltip('Filter', right);
+        }
       }
 
       .text {
@@ -495,6 +514,7 @@ body {
         position: absolute;
         top: 0;
         right: $page-padding;
+        cursor: pointer;
 
         &:hover .list-table-header .header-title:not(.image) {
           display: table-cell;
@@ -504,7 +524,6 @@ body {
           @include fa;
           color: $font-color;
           content: '\f0dc';
-          cursor: pointer;
           text-shadow: $text-shadow;
         }
 
