--- a/src/theme.scss
+++ b/src/theme.scss
@@ -281,15 +281,15 @@ body {
       cursor: pointer;
 
       .text {
-        display: none;
         font-size: 0;
+        height: $font-size + $item-padding + $icon-size;
       }
 
       &:hover .text {
-        width: auto;
+        width: 170px;
         height: $font-size + $item-padding + $icon-size;
         text-decoration: none;
-        display: block;
+        opacity: 1;
 
         .link-list-setting,
         .link-style-setting {
@@ -516,8 +516,9 @@ body {
         right: $page-padding;
         cursor: pointer;
 
-        &:hover .list-table-header .header-title:not(.image) {
-          display: table-cell;
+        &:hover .list-table-header {
+          width: 850px;
+          opacity: 1;
         }
 
         &:after {
@@ -534,16 +535,23 @@ body {
           font-size: 0;
           z-index: 1;
           padding-top: $item-padding;
-          margin-top: ($font-size + $item-padding*2) * -1;
+          margin-top: ($icon-size + $item-padding*2) * -1;
           margin-right: $text-padding * -1;
           height: $font-size + $icon-size + $item-padding;
+          width: 0;
+          opacity: 0;
+          text-align: right;
+          overflow: hidden;
+          transition-property: opacity; //TODO: should be all but this will cause a ugly linebreak during the animation
+          transition-duration: 0.3s;
+          transition-timing-function: ease-in-out;
 
           .header-title {
             height: auto;
             width: auto;
             background: none;
             border-bottom: 0;
-            display: none;
+            display: inline-block;
 
             .sort-icon {
               color: $font-color;
@@ -559,6 +567,10 @@ body {
               &:hover {
                 text-decoration: underline;
               }
+            }
+
+            &.image {
+              display: none;
             }
 
             &.title .link {
