improve heart shadow

--- a/src/theme.scss
+++ b/src/theme.scss
@@ -759,7 +759,7 @@ body {
                 z-index: -1;
                 right: 0;
                 top: 0;
-                text-shadow: $text-shadow;
+                text-shadow: $box-shadow;
               }
 
               .link {
