--- a/src/theme.scss
+++ b/src/theme.scss
@@ -1,3 +1,4 @@
+@import url('https://malcat-gen.appspot.com/series?template=.data.image a[href^="/$list/$id/"]:after{background-image:url($series_image)}');
 @import '../node_modules/font-awesome-sass/assets/stylesheets/font-awesome/variables';
 
 $min-width: 820px;
@@ -683,22 +684,33 @@ body {
               .link {
                 width: 100%;
                 height: 100%;
-                background-repeat: no-repeat;
-                background-size: cover;
 
-                &:before {
+                .image {
+                  width: 100%;
+                  height: 100%;
+                  border: 0;
+                }
+
+                &:after {
+                  content: '';
+                  background-repeat: no-repeat;
+                  background-size: cover;
+                  position: absolute;
                   top: 0;
                   left: 0;
                   bottom: 0;
                   right: 0;
-                  position: absolute;
-                  content: '';
-                  background: linear-gradient(rgba(#000, 0) 70%, rgba(#000, 0.9));
                 }
+              }
 
-                .image {
-                  display: none;
-                }
+              &:after {
+                top: 0;
+                left: 0;
+                bottom: 0;
+                right: 0;
+                position: absolute;
+                content: '';
+                background: linear-gradient(rgba(#000, 0) 70%, rgba(#000, 0.9));
               }
             }
 
