--- a/src/theme.scss
+++ b/src/theme.scss
@@ -605,7 +605,9 @@ body {
           z-index: 2;
 
           .list-table-data .data.title .add-edit-more,
-          .list-table-data .data.progress .icon-add-episode {
+          .list-table-data .data.progress .icon-add-episode,
+          .list-table-data .data.chapter .icon-add-chapter,
+          .list-table-data .data.volume .icon-add-volume {
             display: block;
           }
         }
@@ -797,7 +799,9 @@ body {
               left: $item-padding;
             }
 
-            &.progress {
+            &.progress,
+            &.chapter,
+            &.volume {
               @include font;
               z-index: 1;
               color: $font-color;
@@ -826,7 +830,9 @@ body {
                 }
               }
 
-              .icon-add-episode {
+              .icon-add-episode,
+              .icon-add-chapter,
+              .icon-add-volume {
                 display: none;
                 position: absolute;
                 right: ($icon-size + $item-padding*2) * -1;
@@ -839,11 +845,21 @@ body {
               }
             }
 
-            &.rated {
+            &.volume {
+              top: $icon-size + $item-padding*2;
+            }
+
+            &.rated,
+            &.magazine {
               @include font;
               color: $font-color-2;
               bottom: $item-padding;
               right: $item-padding;
+
+              a {
+                @include font;
+                color: $font-color-2;
+              }
             }
 
             &.season {
@@ -867,7 +883,8 @@ body {
             &.airing-started,
             &.airing-finished,
             &.studio,
-            &.licensor {
+            &.licensor,
+            &.retail {
               display: none;
             }
           }
@@ -875,6 +892,10 @@ body {
       }
     }
   }
+}
+
+.manga .list-container .list-unit .list-table .list-item .list-table-data .data.status {
+  height: ($icon-size + $item-padding)*2 + $item-padding;
 }
 
 #footer-block {
