--- a/src/theme.scss
+++ b/src/theme.scss
@@ -730,6 +730,13 @@ body {
                 text-shadow: $text-shadow;
               }
 
+              .rewatching,
+              .content-status {
+                font-size: $font-size;
+                color: $font-color-2;
+                text-shadow: $text-shadow;
+              }
+
               .add-edit-more {
                 display: none;
                 font-size: 0;
