use correct font for content status and rewatching

--- a/src/theme.scss
+++ b/src/theme.scss
@@ -113,6 +113,8 @@ select {
   outline: none;
   caret-color: $font-color;
   color: $font-color;
+
+  -moz-appearance: none;
   -webkit-appearance: none;
   appearance: none;
 
