improve display of MAL logo

--- a/src/theme.scss
+++ b/src/theme.scss
@@ -50,6 +50,7 @@ $text-border: currentColor 1px solid;
 
 @font-face {
   font-family: 'AGRevueCyr Roman Medium';
+  font-weight: 100;
   src: local('AGRevueCyr Roman Medium'), local('AGRevueCyr-Roman-Medium'), url('./assets/AGRevueCyr.woff') format('woff');
 }
 
@@ -233,7 +234,7 @@ select {
     left: $page-padding;
     z-index: 1;
     font-family: 'AGRevueCyr Roman Medium', tahoma, verdana, arial, sans-serif;
-    font-size: 32px;
+    font-size: 34px;
     width: auto;
     background-image: none;
     color: inherit;
